# pdf-stitch

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.jsx  AppHeader.module.css  NoDocument.module.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DragArea.jsx  LoadingDocument.jsx  NoDocument.jsx  SortablePage.jsx
src/components/layout/: AppHeader.jsx  Layout.jsx
src/hooks/: documentStore.js
src/icons/: Icons.jsx
